<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/visuals_header">

        <ListPreference
            app:key="window_type"
            app:title="@string/window_type_title"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/window_type_entries"
            app:entryValues="@array/window_type_values"
            app:defaultValue="horizontal" />

        <io.github.lee0701.converter.settings.preference.ShowCandidateWindowAdjusterPreference
            app:key="adjust_window"
            app:title="@string/adjust_window_title"
            app:summary="@string/adjust_window_summary" />

        <SeekBarPreference
            app:key="window_width"
            app:title="@string/window_width_title"
            app:showSeekBarValue="true"
            android:defaultValue="5"
            app:min="3"
            android:max="10" />

        <SeekBarPreference
            app:key="window_height"
            app:title="@string/window_height_title"
            app:showSeekBarValue="true"
            app:defaultValue="4"
            app:min="3"
            android:max="10" />

        <SeekBarPreference
            app:key="column_count"
            app:title="@string/column_count_title"
            app:showSeekBarValue="true"
            app:defaultValue="2"
            app:min="1"
            android:max="4" />

        <CheckBoxPreference
            app:key="show_extra"
            app:title="@string/show_extra_title"
            android:summary="@string/show_extra_summary"
            android:defaultValue="true" />

        <ListPreference
            app:key="window_color"
            app:title="@string/window_color_title"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/window_color_entries"
            app:entryValues="@array/window_color_values"
            app:defaultValue="default" />

        <com.skydoves.colorpickerpreference.ColorPickerPreference
            android:key="custom_window_color"
            android:title="@string/custom_window_color_title"
            android:summary="@string/custom_window_color_summary"
            app:default_color="@android:color/black"
            app:preference_dialog_negative="@string/discard"
            app:preference_dialog_positive="@string/save" />

        <io.github.lee0701.converter.settings.preference.ColorEditTextPreference
            android:key="custom_window_color_text"
            android:title="@string/custom_window_color_text_title"
            android:defaultValue="0" />

    </PreferenceCategory>

</PreferenceScreen>