<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/behavior_header">

        <CheckBoxPreference
            android:key="enable_auto_hiding"
            android:title="@string/enable_auto_hiding_title"
            android:summary="@string/enable_auto_hiding_summary"
            android:defaultValue="true" />

        <io.github.lee0701.converter.settings.preference.MultiSelectAppListPreference
            android:key="assistant_enabled_apps"
            android:title="@string/assistant_enabled_apps_title"
            android:summary="@string/assistant_enabled_apps_summary"
            android:defaultValue="@array/input_assistant_defaults" />

    </PreferenceCategory>

</PreferenceScreen>