<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/service_header">

        <io.github.lee0701.converter.settings.preference.OpenAccessibilitySettingsPreference
            app:title="@string/enable_service_title"
            android:summary="@string/enable_service_summary" />

        <ListPreference
            app:key="display_locale"
            app:defaultValue="ko-Kore-KR"
            app:entries="@array/display_locale_entries"
            app:entryValues="@array/display_locale_values"
            app:title="@string/display_locale_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>