<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_new_dictionary"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        app:iconTint="?colorControlNormal"
        android:title="@string/new_dictionary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit_dictionary"
        android:icon="@drawable/ic_baseline_edit_24"
        app:iconTint="?colorControlNormal"
        android:title="@string/edit_dictionary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_import_dictionary"
        android:icon="@drawable/ic_baseline_file_download_24"
        app:iconTint="?colorControlNormal"
        android:title="@string/import_dictionary"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_dictionary"
        android:icon="@drawable/ic_baseline_file_upload_24"
        app:iconTint="?colorControlNormal"
        android:title="@string/export_dictionary"
        app:showAsAction="never" />

</menu>