<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/conversion_header">

        <ListPreference
            app:key="output_format"
            app:title="@string/output_format_title"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/output_format_entries"
            app:entryValues="@array/output_format_values"
            app:defaultValue="hanja_only" />

        <MultiSelectListPreference
            app:key="additional_dictionaries"
            app:title="@string/additional_dictionaries_title"
            app:entries="@array/additional_dictionaries_entries"
            android:entryValues="@array/additional_dictionaries_values" />

    </PreferenceCategory>

</PreferenceScreen>