<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:theme="@style/Theme.Converter.Information">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_first"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="16dp"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp"
        android:text="@string/information_details" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="16dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textview_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:text="@string/information_question"
            android:textAlignment="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_agree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="4dp"
            android:paddingVertical="16dp"
            android:layout_gravity="center"
            style="@style/Theme.Converter.AgreeButton"
            android:text="@string/agree" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_disagree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="4dp"
            android:paddingVertical="16dp"
            android:layout_gravity="center"
            android:text="@string/disagree" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>